[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/base.tres" type="Theme" id=1]
[ext_resource path="res://scripts/scene_scripts/title_scene.gd" type="Script" id=2]
[ext_resource path="res://scenes/settings_scene/settings_scene.tscn" type="PackedScene" id=3]




[node name="title_scene" type="Control"]
self_modulate = Color( 1, 1, 1, 0.501961 )
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
web_link_url = "https://your_website.something"
settings_menu = ExtResource( 3 )

[node name="Start_Menu" type="PanelContainer" parent="."]
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="Start_Menu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 89.0
margin_bottom = 473.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_Title" type="Label" parent="Start_Menu/VBC"]
margin_right = 82.0
margin_bottom = 14.0
theme = ExtResource( 1 )
text = "game title"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="Start_Menu/VBC"]
margin_top = 18.0
margin_right = 82.0
margin_bottom = 22.0
theme = ExtResource( 1 )

[node name="Continue" type="Button" parent="Start_Menu/VBC"]
margin_top = 26.0
margin_right = 82.0
margin_bottom = 46.0
theme = ExtResource( 1 )
text = "Continue"

[node name="New_Game" type="Button" parent="Start_Menu/VBC"]
margin_top = 50.0
margin_right = 82.0
margin_bottom = 70.0
theme = ExtResource( 1 )
text = "New Game"

[node name="Settings" type="Button" parent="Start_Menu/VBC"]
margin_top = 74.0
margin_right = 82.0
margin_bottom = 94.0
theme = ExtResource( 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="Start_Menu/VBC"]
margin_top = 98.0
margin_right = 82.0
margin_bottom = 118.0
theme = ExtResource( 1 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Start_Menu/VBC"]
margin_top = 122.0
margin_right = 82.0
margin_bottom = 142.0
theme = ExtResource( 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="Start_Menu/VBC"]
margin_top = 146.0
margin_right = 82.0
margin_bottom = 150.0

[node name="Developer_LinkButton" type="LinkButton" parent="Start_Menu/VBC"]
margin_top = 154.0
margin_right = 82.0
margin_bottom = 168.0
focus_mode = 2
theme = ExtResource( 1 )
enabled_focus_mode = 2
text = "Visit website"
